# poetry-namespace-package-test

./: README.md
foo-core/: pyproject.toml
foo-core/foo/core/: __init__.py  foo_core.py  foo_core_test.py
foo-platform-api/: pyproject.toml
foo-platform-api/foo/platform/api/: __init__.py  main.py  main_test.py
foo-platform-common/: pyproject.toml
foo-platform-common/foo/platform/: README.txt  utils.py  utils_test.py
