[tool.poetry]
name = "foo-platform-common"
version = "0.1.0"
description = ""
authors = ["Scott Jespersen <sjespersen at myst dot ai>"]
packages = [{ include = "foo/platform" }]

[tool.poetry.dependencies]
python = "^3.8"
foo-core = { path = "../foo-core", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
